--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                 <div class="container">
                     <div>
                         <h1>Welcome to Pura Village</h1>
-                        <p>Pura is a small Village/hamlet in Kushtagi Taluk in Koppal District of Karnataka State, India. It comes under Pura Panchayath. It belongs to Gulbarga Division . It is located 64 KM towards North from District head quarters Koppal. 411 KM from State capital Bangalore</p>
+                        <p>Pura village is located in Magadi taluka of Ramanagara district in Karnataka, India. It is situated 5km away from sub-district headquarter Magadi (tehsildar office) and 31km away from district headquarter Ramanagara. As per 2009 stats, Madabal is the gram panchayat of Pura village.
+
+</p>
                     </div>
                 </div>
             </div>
